# tx

./: .commit_msg  AGENTS.md  CHANGELOG  LICENSE  README.md  flake.nix  ppad-tx.cabal
bench/: Main.hs  Weight.hs
lib/Bitcoin/Prim/: Tx.hs
lib/Bitcoin/Prim/Tx/: Sighash.hs
plans/: IMPL1.md  PPAD-TX.md
test/: Main.hs
