cabal-version:      3.0
name:               ppad-tx
version:            0.1.0
synopsis:           Minimal Bitcoin transaction primitives.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.10.3
extra-doc-files:    CHANGELOG
description:
  Minimal Bitcoin transaction primitives for ppad libraries, including
  raw transaction types, serialisation, txid computation, and sighash
  calculation.

flag llvm
  description: Use GHC's LLVM backend.
  default:     False
  manual:      True

source-repository head
  type:     git
  location: git.ppad.tech/tx.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  if flag(llvm)
    ghc-options: -fllvm -O2
  exposed-modules:
      Bitcoin.Prim.Tx
      Bitcoin.Prim.Tx.Sighash
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , deepseq >= 1.4 && < 2
    , ppad-base16 >= 0.3 && < 0.4
    , ppad-sha256 >= 0.3 && < 0.4

test-suite tx-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall

  build-depends:
      base
    , bytestring
    , ppad-base16
    , ppad-tx
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck

benchmark tx-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-tx

benchmark tx-weigh
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Weight.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , deepseq
    , ppad-tx
    , weigh
